# cxx_crud_file_unix

./: CMakeLists.txt  ConvertUTF.c  FileTools.h  FileTools.hpp  README.md  jsoncpp.cpp  main.cpp  pch.h
bmp/: BMP.h
files_test/: ini_test_01.ini  ini_test_02.ini  json_test_01.json  test_01.txt  test_02.txt
ini/: ConvertUTF.h  SimpleIni.h
json/: jsoncpp.cpp
